// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform record with null pending violation criteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMeNoPendingViolationsWhileSupervised": {},
    "usMePaidAllOwedRestitution": {},
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "stateCode": "US_ME",
}
`;

exports[`transform record with pending violation ineligibleCriteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMePaidAllOwedRestitution": {},
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {
    "usMeNoPendingViolationsWhileSupervised": {
      "currentStatus": "Pending Violation",
      "violationDate": 2022-07-13T00:00:00.000Z,
    },
  },
  "stateCode": "US_ME",
}
`;

exports[`transform record with restitution case 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMePaidAllOwedRestitution": {
      "amountOwed": 0,
    },
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "stateCode": "US_ME",
}
`;

exports[`transform record with restitution ineligibleCriteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {
    "usMePaidAllOwedRestitution": {
      "amountOwed": 500,
    },
  },
  "stateCode": "US_ME",
}
`;

exports[`transform record without restitution case 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMePaidAllOwedRestitution": {},
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "stateCode": "US_ME",
}
`;
